--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <td><img src="Images/ElijahProfile.png" alt="Elijah's profile picture" class="profilePicutre"></td>
                 <td><h1>Elijah Mekwunye Jr.</h1>
                     <p><em> <strong> Game programmer and web developer</STRONG>.</em></p>
-                    <P>I am a <em>game programmer and web developer</em> trying to get my start in the game industry. I have a passion for playing gmaes and learning about new tech</P>
+                    <P>I am a <em>game programmer and web developer</em> trying to get my start in the game industry. I have a passion for playing games and learning about new tech</P>
                 </td>
             </tr>
         </table>
